cfg.txt
statementlist -> statement statementlist | empty
statement -> subdec | vardec | movement | turn | subcall | statementlist | loop | control | ifstatement | empty
subdec -> "sub" name statementlist "end"
vardec -> "set" name expr
loop -> "repeat" expr statementlist "end"
subcall -> "call" name
movement -> "forward" expr | "backward" expr
turn -> "left" expr | "right" expr
control -> "penup" | "pendown" | "home" | "color" expr | "print" expr | "hide" | "show"
ifstatement -> "if" booleanexpr statementlist "end"
booleanexpr -> expr ("=" | "!=" | "<=" | "<" | ">=" | ">") expr
expr -> term { ("+" | "-") term }
term -> fact { ("*" | "/") fact }
fact -> point { "^" point }
point -> name | num | "(" expr ")" | "-" point | builtin
builtin -> "random"
name -> *alphanumeric_combo*
num -> *integer*
empty -> *empty*
